alignment fix

--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
 * {
     margin: 0;
     padding: 0;
-    
+    box-sizing: border-box;
 }
 
 /* Basic styles */
@@ -15,15 +15,13 @@ body {
 
 .container {
     max-width: 1400px;
-    padding: 0 20px;
+    padding: 0px;
 }
-
+s
 header {
     background-color: #333; /* Header background color */
     color: #fff; /* Header text color */
     padding: 30px 0;
-    padding-top: 20px;
-    padding-bottom: 50px;
 }
 
 nav {
@@ -43,6 +41,8 @@ nav h1 {
     background-position: center;
     text-align: center;
     padding: 100px 0;
+    color: #fff; /* Text color in both light and dark mode */
+    margin: 0 auto; /* Center the hero section horizontally */
 }
 
 .hero h2 {
@@ -52,6 +52,7 @@ nav h1 {
 
 .hero p {
     font-size: 18px;
+
 }
 
 /* Dark mode styles */
@@ -134,6 +135,8 @@ body:not(.dark-mode) {
 .toggle-label {
     margin-left: 10px;
 }
+
+/* Styles for the navigation bar */
 nav {
     float: right;
 }
@@ -145,7 +148,7 @@ nav ul {
 
 nav li {
     float: left;
-    margin-left:  35px;
+    margin-left: 35px;
     padding-right: 50px;
 }
 
@@ -155,9 +158,4 @@ nav a {
     text-transform: uppercase;
     font-family: 'Roboto', Arial, sans-serif;
     font-size: 20px;
-}
-
-h1 {
-    float: left;
-
 }
